# poetry-jupyter-template

./: .gitignore  README.md  pyproject.toml
build_tools/docker/: poetry-notebook.yml
build_tools/docker/poetry-notebook/: Dockerfile  jupyter_lab_config.py  poetry-setup.sh  start-python-proc.sh
build_tools/scripts/: env  initial-setup.sh  save-jupyter.sh  start-jupyter.sh  stop-jupyter.sh
build_tools/scripts/docker/: generate-docker-env.sh  install-docker-compose.sh  install-docker.sh
docker/: docker-compose.yml
docker/poetry-notebook/: Dockerfile  fix-permissions  jupyter_notebook_config.py  poetry-setup.sh  start-python-proc.sh  start.sh
scripts/: generate-docker-env.sh  reconstruct_docker.sh  start-jupyter.sh  stop-jupyter.sh
