[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["GRI, Inc."]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.7 || >3.9.7,<3.10"
jupyterlab = "3.6.1"
numpy = "^1.19.4"
seaborn = "^0.11.0"
sklearn = "^0.0"
ipywidgets = "^7.5.1"
streamlit = "1.17.0"
click = "<=8.0.4"
jinja2 = "<3.1.0"
bokeh = "2.4.1"
japanize-matplotlib = "^1.1.3"
joblib = "1.0.1"
psutil = "^5.8.0"
forecastflow = "^4.2.5"
lightgbm = "^3.2.1"
memory-profiler = "^0.58.0"
ipykernel = "^6.0.0"
ipympl = "^0.7.0"
jupyterlab-language-pack-ja-JP = "^3.2.post4"
tqdm = "^4.64.0"
debugpy = "<1.6.5"

[tool.poetry.dev-dependencies]
black = ">=22.6.0"
mypy = ">=0.971"

[tool.black]
target-version = ['py38', 'py39', 'py310']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"